inlined route fields inside route
